--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <!--SCRIPT-->
       <!-- <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
        -->
-    <!-- <script type="module" src="./scripts/origin/Api.js"></script>
-      <script type="module" src="./scripts/pages/home/homePage.js"></script>
-      <script type="module" src="./scripts/pages/index.js"></script> -->
+     <!-- <script type="module" src="./scripts/origin/Api.js"></script> -->
+      <!-- <script type="module" src="./scripts/pages/home/homePage.js"></script> -->
+      <!-- <script type="module" src="./scripts/pages/index.js"></script>  -->
       <!-- CSS -->
 
     <link rel="stylesheet" href="public/general-style/general-style.css">
@@ -85,46 +85,29 @@
     </main>
     <!-- <script type="module" src="scripts/pages/home/filterTags.js"></script> -->
     <script>
-        
+        alert('BONJOUR');
 
 // AFFICHAGE DE TOUS LES PHOTOGRAPHES PAR DEFAUT
-
+console.log()
     // construction de la section photogra
-    photographe;
-    phoyographerArticle;
-    photographe;
-    photographe;
-    photographe;
-    portrait;
-    photographe;
-    photographe;
-    city;
-    country;
-    photographe;
-    photographe;
-    tagline;
-    photographe;
-    price;
-    photographerArticle;
-    tags;
-    displayPhotographers(data) {
+    function displayPhotographers(data) {
         console.log("-----data-----", data);
         let photographers = data.photographers;
         photographers.map(photographe => {
             let photographerSections = document.getElementById('photographers');
             let photographerArticles = document.createElement('article');
 
-            this.photographerArticle.className = this.photographe.tags.join(' ') + ' articlePhotographer';
+            photographerArticles.className = photographe.tags.join(' ') + ' articlePhotographer';
 
             let templatePhotographer = `
-            <a href="photographers.html?id=${this.photographe.id}"
-                    title="${this.photographe.name}>
-                <img src="${this.photographe.portrait}" alt="${this.photographe.alt}">
-                <h2 class = "name"> ${this.photographe.name} <h2>
+            <a href="photographers.html?id=${photographe.id}"
+                    title="${photographe.name}>
+                <img src="${photographe.portrait}" alt="${photographe.alt}">
+                <h2 class = "name"> ${photographe.name} <h2>
             </a>
-            <p class="location"> ${this.photographe.city}, ${this.photographe.country} </p>
-            <p class="tagline">${this.photographe.tagline}</p>
-            <p class="price"> ${this.photographe.price}</p>
+            <p class="location"> ${photographe.city}, ${photographe.country} </p>
+            <p class="tagline">${photographe.tagline}</p>
+            <p class="price"> ${photographe.price}</p>
 
                         `
             photographerSections.appendChild(photographerArticles);
@@ -133,7 +116,30 @@
 
 
     }
-
+    displayPhotographers(
+        {
+            "photographers" : [
+        {
+        "name": "Mimi Keel",
+        "id": 243,
+        "city": "London",
+        "country": "UK",
+        "tags": ["portrait", "events", "travel", "animals"],
+        "tagline": "Voir le beau dans le quotidien",
+        "price": 400,
+        "portrait": "MimiKeel.jpg"
+      },
+      {
+        "name": "Ellie-Rose Wilkens",
+        "id": 930,
+        "city": "Paris",
+        "country": "France",
+        "tags": ["sports", "architecture"],
+        "tagline": "Capturer des compositions complexes",
+        "price": 250,
+        "portrait": "EllieRoseWilkens.jpg"
+      }]
+    })
 
     </script>
 </body>
