--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             
         </section>
     </main>
+    <!-- <script type="module" src="./scripts/pages/header/header.js"></script> -->
     <script type="module" src="./scripts/pages/index.js"></script>
     <!-- <script type="module" src="scripts/pages/home/filterTags.js"></script> -->
 </body>
