--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&family=Shrikhand&display=swap"
         rel="stylesheet">
+    <link rel="icon" href="./assets/logo/logo.svg">
    
         <title>Fisheye - Home</title>
 </head>
